changes and progress

--- a/index.html
+++ b/index.html
@@ -11,25 +11,24 @@
 </head>
 <body>
 
-<div class="main-container"></div>
+<div id="wrapper" class="container-fluid"></div>
     
     <!--Content Jumbotron (title, start button and questions will show in here)-->
     <div class="container-fluid">
-        Trivia panel
+        <!--Trivia panel-->
         <div class="jumbotron">
             <div class="container">
                 <h1 class="text-center" style="color:white;"><strong>Trivia Time!</strong></h1>
                 <br><br>
-                <button type="button" class="btn btn-outline-light center-block"><strong><h3>Press start to begin</h3></strong></button>
+                <div id="subwrapper">
+                    <button id="start-button" type="button" class="btn btn-outline-light center-block"><strong><h3>Press start to begin</h3></strong></button>
+                </div>
             </div>
         </div>
     </div>
-    <!--This will be the timer-->
-    <h2 class="text-center" id="timer"> </h2>
-    <!--The actual game will be here (questions, choices, etc)-->
-    <div class="text-center" id="game"> </div>
 
-<!--Closing of main-container DIV, do not erase!!!-->
+
+<!--Closing of wrapper DIV, do not erase!!!-->
 </div>
 
     <!-- jQuery -->
