--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="container">
                 <h1 class="text-center" style="color:white;"><strong>Trivia Time!</strong></h1>
                 <br><br>
-                <div id="subwrapper">
+                <div id="subwrapper" class="text-center">
                     <button id="start-button" type="button" class="btn btn-outline-light center-block"><strong><h3>Press start to begin</h3></strong></button>
                 </div>
             </div>
