--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
 
-<div id="wrapper" class="container-fluid"></div>
-    
+<div id="wrapper" class="container-fluid">
+    <
     <!--Content Jumbotron (title, start button and questions will show in here)-->
     <div class="container-fluid">
         <!--Trivia panel-->
